Version 2.02.50 - 
================================
  Use newly-independent LVM_LIBAPI in liblvm soname.  E.g. liblvm2app.so.2.1.
  Add an API version number, LVM_LIBAPI, to the VERSION string for liblvm.
  Pass a pointer to struct cmd_context to init_multiple_segtypes
  Return EINVALID_CMD_LINE not success when invalid VG name format is used.
  Remove unnecessary messages after vgcreate/vgsplit refactor (2.02.49).
  Add log_errno to set a specific errno and replace log_error in due course.
  Add lvm_errno and lvm_errmsg to liblvm to obtain failure information.
  Change create_toolcontext to still return an object if it fails part-way.
  Add EUNCLASSIFIED (-1) as the default LVM errno code.
  Store any errno and error messages issued while processing each command.
  Use log_error macro consistently throughout in place of log_err.

Version 2.02.49 - 15th July 2009
================================
  Exclude VG_GLOBAL from vg_write_lock_held so scans open devs read-only again.
  Add unit test case for liblvm VG create/delete APIs.
  Add liblvm APIs to implement creation and deletion of VGs.
  Initialize cmd->cmd_line to "liblvm" in new liblvm library.
  Place handles to liblvm objects for pv, vg, lv, lvseg, pvseg inside lvm.h.
  Refactor vgsplit and vgextend to remove READ_REQUIRE_RESIZEABLE flag.
  Use _exit() not exit() after forking to avoid flushing libc buffers twice.
  Add cast to log_info arg in _find_labeller to avoid Sparc64 warning.
  Make cmd->cmd_line const.
  Fix dev name mismatch in vgcreate man page example.
  Refactor vg_remove_single for use in liblvm.
  Make all tools use consistent lock ordering obtaining VG_ORPHAN lock second.
  Check md devices for a partition table during device scan.
  Add extended device (blkext) and md partition (mdp) types to filters.
  Make text metadata read errors for segment areas more precise.
  Fix text segment metadata read errors to mention correct segment name.